Replace String.format() calls with String::formatted.